--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,9 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           role-session-name: GitHub-OIDC-TERRAFORM
 
+      - name: Debug AWS identity
+        run: aws sts get-caller-identity   
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
