--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,7 +6,6 @@ on:
       - main
       - dev
       - stage
-  pull_request:
   workflow_dispatch:
     inputs:
       environment:
@@ -29,7 +28,6 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      TF_LOG: INFO
       AWS_REGION: ${{ secrets.AWS_REGION }}
       ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_TO_ASSUME }}
       ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
@@ -52,16 +50,16 @@ jobs:
           terraform_version: 1.9.5
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -reconfigure -backend-config="region=${{ env.AWS_REGION }}"
 
-      - name: Terraform Validate
-        run: terraform validate
+      - name: Terraform Workspace
+        run: |
+          terraform workspace list || true
+          terraform workspace select ${{ env.ENVIRONMENT }} || terraform workspace new ${{ env.ENVIRONMENT }}
 
       - name: Terraform Plan
         run: terraform plan -no-color -input=false -var-file="environments/${{ env.ENVIRONMENT }}/terraform.tfvars"
 
       - name: Terraform Apply
-        if: |
-          github.event_name == 'workflow_dispatch' ||
-          github.ref == 'refs/heads/${{ env.ENVIRONMENT }}'
+        if: always()
         run: terraform apply -auto-approve -input=false -var-file="environments/${{ env.ENVIRONMENT }}/terraform.tfvars"
