--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,7 +50,14 @@ jobs:
           terraform_version: 1.9.5
 
       - name: Terraform Init
-        run: terraform init -reconfigure -backend-config="region=${{ env.AWS_REGION }}"
+        run: |
+          terraform init -reconfigure \
+            -backend-config="region=${{ env.AWS_REGION }}" \
+            -backend-config="github-oidc-bucket-terraform" \
+            -backend-config="key=aws-vpc/${{ env.ENVIRONMENT }}/terraform.tfstate" \
+            -backend-config="dynamodb_table=terraform-lock-table" \
+            -backend-config="encrypt=true"
+
 
       - name: Terraform Workspace
         run: |
