--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Terraform Init (Reconfigure Backend)
         run: |
           terraform init -reconfigure \
-            -backend-config="bucket=github-oidc-bucket-terraform" \
+            -backend-config="bucket=${{ secrets.AWS_S3_BUCKET }}" \
             -backend-config="key=aws-vpc/${{ env.ENVIRONMENT }}/terraform.tfstate" \
             -backend-config="region=${{ env.AWS_REGION }}" \
             -backend-config="dynamodb_table=terraform-lock-table" \
