--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,6 +30,8 @@ jobs:
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+      DYNAMODB_TABLE: ${{ secrets.DYNAMODB_TABLE }}
       ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
@@ -52,13 +54,11 @@ jobs:
       - name: Terraform Init (Reconfigure Backend)
         run: |
           terraform init -reconfigure \
-            -backend-config="bucket=${{ secrets.AWS_S3_BUCKET }}" \
-            -backend-config="key=aws-vpc/${{ env.ENVIRONMENT }}/terraform.tfstate" \
-            -backend-config="region=${{ env.AWS_REGION }}" \
-            -backend-config="dynamodb_table=terraform-lock-table" \
+            -backend-config="bucket=$AWS_S3_BUCKET" \
+            -backend-config="key=aws-vpc/${ENVIRONMENT}/terraform.tfstate" \
+            -backend-config="region=$AWS_REGION" \
+            -backend-config="dynamodb_table=$DYNAMODB_TABLE" \
             -backend-config="encrypt=true"
-
-
 
       - name: Terraform Workspace
         run: |
