--- a/.github/workflows/destroy copy.yml
+++ b/.github/workflows/destroy copy.yml
@@ -46,24 +46,19 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.5
-      - name: Verify backend S3 state file
-        run: |
-          echo "Checking S3 backend file:"
-          aws s3 ls s3://$AWS_S3_BUCKET/aws-vpc/${ENVIRONMENT}/terraform.tfstate || echo "⚠️ State file not found in S3"
 
       - name: Terraform Init (Reconfigure Backend)
         run: |
           terraform init -reconfigure \
             -backend-config="bucket=$AWS_S3_BUCKET" \
-            -backend-config="key=terraform/state/vpc-$ENVIRONMENT.tfstate" \
+            -backend-config="key=aws-vpc/${ENVIRONMENT}/terraform.tfstate" \
             -backend-config="region=$AWS_REGION" \
             -backend-config="dynamodb_table=$DYNAMODB_TABLE" \
             -backend-config="encrypt=true"
 
-      - name: Debug Terraform Workspace & Backend
+      - name: Terraform Workspace
         run: |
-          terraform workspace show || true
-          terraform providers
+          terraform workspace select ${{ env.ENVIRONMENT }} || terraform workspace new ${{ env.ENVIRONMENT }}
 
       - name: Terraform Validate
         run: terraform validate
