updated destroy yml

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -26,7 +26,7 @@ jobs:
       TF_LOG: INFO
       AWS_REGION: ${{ secrets.AWS_REGION }}
       ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+      AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
       DYNAMODB_TABLE: ${{ secrets.DYNAMODB_TABLE }}
       ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
 
