--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -53,11 +53,12 @@ jobs:
 
       - name: Terraform Init (Reconfigure Backend)
         run: |
+          echo "Using S3 bucket: ${{ env.AWS_S3_BUCKET }}"
           terraform init -reconfigure \
-            -backend-config="bucket=github-oidc-bucket-terraform"  \
+            -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
             -backend-config="key=aws-vpc/${{ env.ENVIRONMENT }}/terraform.tfstate" \
-            -backend-config="region=$AWS_REGION" \
-            -backend-config="dynamodb_table=$DYNAMODB_TABLE" \
+            -backend-config="region=${{ env.AWS_REGION }}" \
+            -backend-config="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
             -backend-config="encrypt=true"
 
       - name: Debug Terraform Workspace & Backend
