--- a/.github/workflows/ec2-deploy.yml
+++ b/.github/workflows/ec2-deploy.yml
@@ -36,21 +36,25 @@ jobs:
           terraform_version: 1.9.5
 
       - name: Terraform Init (Reconfigure Backend)
+        working-directory: ./terraform/ec2
         run: |
           terraform init -reconfigure \
             -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
-            -backend-config="key=aws-vpc/${{ github.event.inputs.environment }}/terraform.tfstate" \
+            -backend-config="key=ec2/${{ github.event.inputs.environment }}/terraform.tfstate" \
             -backend-config="region=${{ env.AWS_REGION }}" \
             -backend-config="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
             -backend-config="encrypt=true"
 
       - name: Terraform Plan
+        working-directory: ./terraform/ec2
         run: |
-          terraform plan -var="environment=${{ github.event.inputs.environment }}" \
-                         -var="aws_region=${{ env.AWS_REGION }}" \
-                         -var="backend_bucket=${{ env.AWS_S3_BUCKET }}" \
-                         -var="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
-                         -out=tfplan
+          terraform plan -input=false \
+            -var="environment=${{ github.event.inputs.environment }}" \
+            -var="aws_region=${{ env.AWS_REGION }}" \
+            -var="backend_bucket=${{ env.AWS_S3_BUCKET }}" \
+            -var="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
+            -out=tfplan
 
       - name: Terraform Apply
+        working-directory: ./terraform/ec2
         run: terraform apply -auto-approve tfplan
