updated ec2 deploy and destroy.yml

--- a/.github/workflows/VPC-deploy.yml
+++ b/.github/workflows/VPC-deploy.yml
@@ -47,7 +47,10 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ./terraform/vpc
-        run: terraform plan -input=false -var-file="environments/${{ github.event.inputs.environment }}/terraform.tfvars" -out=tfplan
+        run: |
+          terraform plan -input=false \
+            -var-file="environments/${{ github.event.inputs.environment }}/terraform.tfvars" \
+            -out=tfplan
 
       - name: Terraform Apply
         working-directory: ./terraform/vpc
