--- a/.github/workflows/VPC-deploy.yml
+++ b/.github/workflows/VPC-deploy.yml
@@ -11,8 +11,6 @@ on:
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-  AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
-  DYNAMODB_TABLE: ${{ secrets.DYNAMODB_TABLE }}
 
 jobs:
   terraform-vpc:
@@ -35,22 +33,22 @@ jobs:
         with:
           terraform_version: 1.9.5
 
-      - name: Terraform Init (Reconfigure Backend)
+      - name: Terraform Init
+        working-directory: ./terraform/vpc
+        run: terraform init -reconfigure
+
+      - name: Select or Create Workspace
         working-directory: ./terraform/vpc
         run: |
-          terraform init -reconfigure \
-            -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
-            -backend-config="key=vpc/${{ github.event.inputs.environment }}/terraform.tfstate" \
-            -backend-config="region=${{ env.AWS_REGION }}" \
-            -backend-config="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
-            -backend-config="encrypt=true"
+          terraform workspace select ${{ github.event.inputs.environment }} || \
+          terraform workspace new ${{ github.event.inputs.environment }}
 
       - name: Terraform Plan
         working-directory: ./terraform/vpc
         run: |
           terraform plan -input=false \
-            -var-file="environments/${{ github.event.inputs.environment }}/terraform.tfvars" \
-            -out=tfplan
+          -var-file="environments/${{ github.event.inputs.environment }}/terraform.tfvars" \
+          -out=tfplan
 
       - name: Terraform Apply
         working-directory: ./terraform/vpc
