--- a/.github/workflows/VPC-deploy.yml
+++ b/.github/workflows/VPC-deploy.yml
@@ -8,15 +8,15 @@ on:
         required: true
         default: 'dev'
 
+env:
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+  AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
+  DYNAMODB_TABLE: ${{ secrets.DYNAMODB_TABLE }}
+
 jobs:
   terraform-vpc:
     runs-on: ubuntu-latest
-
-    env:
-      ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
-      DYNAMODB_TABLE: ${{ secrets.DYNAMODB_TABLE }}
 
     steps:
       - name: Checkout repository
@@ -38,27 +38,18 @@ jobs:
       - name: Terraform Init (Reconfigure Backend)
         working-directory: ./terraform/vpc
         run: |
-          # Trim any whitespace from secrets
-          AWS_S3_BUCKET="${AWS_S3_BUCKET//[[:space:]]/}"
-          DYNAMODB_TABLE="${DYNAMODB_TABLE//[[:space:]]/}"
-          AWS_REGION="${AWS_REGION//[[:space:]]/}"
-
-          echo "Using S3 bucket: '$AWS_S3_BUCKET'"
-          echo "Using DynamoDB table: '$DYNAMODB_TABLE'"
-          echo "Using AWS region: '$AWS_REGION'"
-
           terraform init -reconfigure \
-            -backend-config="bucket=$AWS_S3_BUCKET" \
+            -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
             -backend-config="key=vpc/${{ github.event.inputs.environment }}/terraform.tfstate" \
-            -backend-config="region=$AWS_REGION" \
-            -backend-config="dynamodb_table=$DYNAMODB_TABLE" \
+            -backend-config="region=${{ env.AWS_REGION }}" \
+            -backend-config="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
             -backend-config="encrypt=true"
 
       - name: Verify Terraform Init
         working-directory: ./terraform/vpc
         run: |
-          echo "Contents of .terraform after init:"
-          ls -R .terraform || echo "No .terraform folder found!"
+          echo "Contents of .terraform folder:"
+          ls -R .terraform || echo "⚠️ .terraform folder not found!"
 
       - name: Terraform Plan
         working-directory: ./terraform/vpc
