--- a/.github/workflows/ec2-deploy.yml
+++ b/.github/workflows/ec2-deploy.yml
@@ -1,12 +1,25 @@
-name: EC2 Deploy
+name: Terraform EC2 Deploy
 
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment to deploy (dev/stage/prod)'
+        description: "Select environment to deploy (dev, stage, prod)"
         required: true
-        default: 'dev'
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - stage
+          - prod
+      key_pair_name:
+        description: "EC2 SSH key pair name"
+        required: true
+        default: "your-keypair-name"
+
+permissions:
+  id-token: write
+  contents: read
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -36,25 +49,26 @@ jobs:
           terraform_version: 1.9.5
 
       - name: Terraform Init (Reconfigure Backend)
-        working-directory: ./terraform/ec2
         run: |
           terraform init -reconfigure \
             -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
-            -backend-config="key=ec2/${{ github.event.inputs.environment }}/terraform.tfstate" \
+            -backend-config="key=aws-vpc/${{ github.event.inputs.environment }}/terraform.tfstate" \
             -backend-config="region=${{ env.AWS_REGION }}" \
             -backend-config="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
             -backend-config="encrypt=true"
 
+      - name: Terraform Validate
+        run: terraform validate
+
       - name: Terraform Plan
-        working-directory: ./terraform/ec2
-        run: |
-          terraform plan -input=false \
-            -var="environment=${{ github.event.inputs.environment }}" \
-            -var="aws_region=${{ env.AWS_REGION }}" \
-            -var="backend_bucket=${{ env.AWS_S3_BUCKET }}" \
-            -var="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
-            -out=tfplan
+        run: terraform plan \
+          -input=false \
+          -var="environment=${{ github.event.inputs.environment }}" \
+          -var="key_pair_name=${{ github.event.inputs.key_pair_name }}" \
+          -out=tfplan
 
       - name: Terraform Apply
-        working-directory: ./terraform/ec2
         run: terraform apply -auto-approve tfplan
+
+      - name: Output EC2 Public IP
+        run: terraform output ec2_public_ip
